# inventory_viewer

./: LICENSE  README.md  pyproject.toml
inventory_viewer/: __init__.py  navigation.py  tables.py  urls.py  views.py
inventory_viewer/templates/inventory_viewer/: inventory_view.html
