[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "inventory_viewer"
version = "1.0.1"
authors = [
  { name="Viktor Kubec", email="Viktor.Kubec@gmail.com" },
]
description = "Plugin that shows NetBox devices and modules in tables."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.setuptools.package-data]
"inventory_viewer" = ["templates/**/*.html"]
